# sugarcube

./: .gitmodules  README.md
docs/: .gitattributes
firmware/: CMakeLists.txt  prj.conf  sugarcube.code-workspace
firmware/led/: color.c  color.h  led.c  led.h
firmware/mqtt/: mqtt_client.c  mqtt_client.h
firmware/msg/: glucose_msg.c  glucose_msg.h  msg.h
firmware/network/: network.c  network.h
firmware/src/: main.c
firmware/util/: error.h  status.h
notes/: research.md
pcb/: 9151.kicad_sch  headers.kicad_sch  interface.kicad_sch  power.kicad_sch  sugarcube.kicad_pcb  sugarcube.kicad_pro  sugarcube.kicad_sch  sym-lib-table
sugard/: .gitignore  install.sh  sugard.py  sugard.service  sugard.service.template  tidepool.py
